# rust-tauri-template

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  package.json  quasar.conf.js  vite.config.ts
.cursor/rules/: cleancode.mdc
.github/workflows/: build.yml
app-core/: Cargo.toml
app-core/src/: error.rs  lib.rs  models.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs
specs/: 0001-system-design.md  instructions.md
src/: App.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/layouts/: MainLayout.vue
src/pages/: Index.vue
