[package]
name = "example"
version = "0.1.0"
description = "An example Tauri app"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { workspace = true }
dirs = "5"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = { version = "2", features = ["tracing"] }
tauri-plugin-opener = { version = "2" }
tauri-plugin-store = { version = "2" }
tauri-plugin-window-state = { version = "2" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
app-core = { path = "../app-core" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
# otherwise apply `.features("development")` to your tauri builder
# Default features include production features and development server
default = ["custom-protocol"]
# You should remove the "custom-protocol" feature before building for production
# DO NOT use this feature in production apps as it creates a security risk
# Read more: https://docs.rs/tauri/2/tauri/dev/security/index.html#isolation-pattern
custom-protocol = ["tauri/custom-protocol"]
